<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Guido</string>
    <string name="action_settings">Settings</string>
    <string name="action_undo">Rückgängig</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_signup">Sign Up</string>
    <string name="title_activity_route">Routing</string>
    <string name="title_activity_routes_overview">RoutesOverview</string>
    <string name="title_activity_route_overview">RouteOverview</string>
    <string name="title_activity_route_detail">RouteDetail</string>
    <string name="title_activity_start">StartActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_lobby">Lobby</string>
    <string name="title_activity_route_creator">RouteCreator</string>
    <string name="title_activity_message_overview">MessageOverview</string>
    <string name="title_activity_message_detail">MessageDetail</string>
    <string name="title_activity_contactList">ContactList</string>
    <string name="login_email_textview">EMAIL</string>
    <string name="login_password_textview">PASSWORT</string>
    <string name="login_button_text">LOGIN</string>
    <string name="login_signup_textview"><u>REGISTRIEREN</u></string>
    <string name="signup_button_text">Registrieren</string>
    <string name="signup_password_repeat_textview">PASSWORT bestätigen</string>
    <string name="signup_nickname_edittext">SPITZNAMEN wählen</string>
    <string name="lobby_routesoverview"><u>Routenübersicht</u></string>
    <string name="lobby_create_route"><u>Route erstellen</u></string>
    <string name="lobby_map_view"><u>Kartenansicht</u></string>
    <string name="lobby_inbox"><u>Nachrichten</u></string>
    <string name="title_activity_active_route">ActiveRoute</string>
    <string name="create_route_name">Name</string>
    <string name="create_route_password">Passwort</string>
    <string name="create_route_desc">Beschreibung</string>
    <string name="create_route_maxpart">Maximale Teilnehmeranzahl</string>
    <string name="create_route_private">Private Route</string>
    <string name="create_route_next">Weiter</string>
    <string name="create_route_prev">Zurück</string>
    <string name="create_route_category">Kategorie</string>
    <string name="create_route_date">Startzeitpunkt</string>
    <string name="active_route_action_leave">Route verlassen</string>
    <string name="active_route_action_end">Route beenden</string>
    <string name="general_logout">Ausloggen</string>
    <string name="route_detail_name">NAME</string>
    <string name="route_detail_start">STARTDATUM:</string>
    <string name="route_detail_desc">BESCHREIBUNG</string>
    <string name="route_detail_btn_start">Start</string>
    <string name="route_detail_btn_leave">Verlassen</string>
    <string name="route_detail_btn_delete">Löschen</string>
    <string name="route_detail_btn_join">Beitreten</string>
    <string name="route_detail_maxpart">MAX. TEILNEHMER:</string>
    <string name="route_detail_traveltype">ROUTEN-REISETYP:</string>
    <string name="route_detail_category">KATEGORIE:</string>
    <string name="route_participators">TEILNEHMER:</string>
    <string name="message_to_label">AN:</string>
    <string name="message_subject_label">BETREFF:</string>
    <string name="message_content_label">NACHRICHT:</string>
    <string name="actionbar_refresh_messages">Nachrichtenliste erneuern</string>
    <string name="actionbar_refresh_routes">Routenliste erneuern</string>
    <string name="actionbar_refresh_route_details">Routendetails erneuern</string>
    <string name="title_activity_route_detail_map">RouteDetailMap</string>
    <string name="filter_name">NAME</string>
    <string name="filter_name_hint">Routenname</string>
    <string name="filter_public">ÖFFENTLICHE ROUTEN</string>
    <string name="filter_not_full">ROUTE NICHT VOLL</string>
    <string name="filter_own_routes">MEINE ROUTEN</string>
    <string name="filter_maxparts">MAXIMALE TEILNEHMERZAHL</string>
    <string name="filter_maxparts_hint">Teilnehmerzahl</string>
    <string name="filter_time">UHRZEIT</string>
    <string name="filter_date">DATUM</string>
    <string name="filter_category">KATEGORIE</string>
    <string name="filter_traveltype">REISETYP</string>
    <string name="address_dialog_address_hint">Adresse</string>
    <string name="address_dialog_name_hint">Name</string>
    <string name="address_dialog_desc_hint">Beschreibung</string>
    <string name="title_activity_profile_information">ProfileInformation</string>
    <string name="profile_name">NAME:</string>
    <string name="profile_email">E-MAIL:</string>
    <string name="profile_created">ERSTELLT:</string>
    <string name="profile_participated">TEILGENOMMEN:</string>
    <string name="profile_rank">GUIDO-RANG:</string>
    <string name="profile_edit_name">NAMEN ÄNDERN</string>

</resources>
