<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true" >

    <LinearLayout
        android:id="@+id/LinearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@drawable/register_back"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center_vertical"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="200dp"
            android:text="@string/signup_nickname_edittext"
            android:textColor="@color/guido_grey"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/signup_nickname_edittext"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center_vertical"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:inputType="text" />

        <TextView
            android:id="@+id/signup_email_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center_vertical"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="30dp"
            android:text="@string/login_email_textview"
            android:textColor="@color/guido_grey"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/signup_email_edittext"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center_vertical"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:inputType="textEmailAddress" />

        <TextView
            android:id="@+id/signup_password_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center_vertical"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/login_password_textview"
            android:textColor="@color/guido_grey"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/signup_password_edittext"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center_vertical"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/signup_password_repeat_textview"
            android:textColor="@color/guido_grey"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/signup_password_repeat_edittext"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center_vertical"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/rounded_corners"
            android:onClick="submitRegistration"
            android:paddingBottom="-5dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="-5dp"
            android:text="@string/signup_button_text"
            android:textColor="#FFFFFF"
            android:textSize="15sp" />
    </LinearLayout>

</ScrollView>