<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fillViewport="true" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/create_route_name_edittext"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left|center_vertical"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:hint="@string/create_route_name"
                android:inputType="text" />

            <EditText
                android:id="@+id/create_route_desc_edittext"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left|center_vertical"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:hint="@string/create_route_desc"
                android:inputType="textMultiLine"
                android:scrollHorizontally="false" />

            <EditText
                android:id="@+id/create_route_maxpart_edittext"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left|center_vertical"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:hint="@string/create_route_maxpart"
                android:inputType="number" />

            <CheckBox
                android:id="@+id/create_route_private_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left|center_vertical"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:checked="false"
                android:text="@string/create_route_private"
                android:textColor="@color/guido_grey"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/create_route_password_edittext"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left|center_vertical"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:hint="@string/create_route_password"
                android:inputType="textPassword"
                android:visibility="gone" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:orientation="horizontal" >

                <Spinner
                    android:id="@+id/create_route_category_spinner"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:layout_weight=".5" />

                <Spinner
                    android:id="@+id/create_route_traveltype_spinner"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".5" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:orientation="horizontal" >

                <Spinner
                    android:id="@+id/create_route_time_spinner"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:layout_weight=".5" />

                <Spinner
                    android:id="@+id/create_route_date_spinner"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".5" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
    
    <include layout="@layout/header" />
    
</RelativeLayout>
