<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/ic_general_back_blank"
    android:orientation="vertical"
    android:weightSum="1" >

    <RelativeLayout
        android:id="@+id/profile_name_picture"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:weightSum="1" >

        <LinearLayout
            android:id="@+id/profile_name_label_target"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/profile_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="20dp"
                android:inputType="none"
                android:singleLine="false"
                android:text="@string/profile_name"
                android:textColor="#bbbbbb"
                android:textSize="20sp"
                android:textStyle="bold"
                android:typeface="normal" />

            <TextView
                android:id="@+id/profile_name_target"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#808080"
                android:textSize="18sp" />
        </LinearLayout>

        <ImageView
            android:id="@+id/profile_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="20dp"
            android:layout_marginRight="10dp"
            android:src="@drawable/profile_default" />
    </RelativeLayout>

   <!--  <Button
        android:id="@+id/profile_edit_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:background="@drawable/rounded_corners"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:onClick="editName"
        android:text="@string/profile_edit_name"
        android:textColor="#FFFFFF"
        android:textSize="15sp" /> -->

    <TableRow
        android:id="@+id/profile_email_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:baselineAligned="false"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/profile_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:inputType="none"
            android:singleLine="false"
            android:text="@string/profile_email"
            android:textColor="#bbbbbb"
            android:textSize="20sp"
            android:textStyle="bold"
            android:typeface="normal" />

        <TextView
            android:id="@+id/profile_email_target"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="22dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#808080"
            android:textSize="18sp" />
    </TableRow>

    <TableRow
        android:id="@+id/profile_created_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:baselineAligned="false"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/profile_created"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:inputType="none"
            android:singleLine="false"
            android:text="@string/profile_created"
            android:textColor="#bbbbbb"
            android:textSize="20sp"
            android:textStyle="bold"
            android:typeface="normal" />

        <TextView
            android:id="@+id/profile_created_target"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="22dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#808080"
            android:textSize="18sp" />
    </TableRow>

    <TableRow
        android:id="@+id/profile_participated_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:baselineAligned="false"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/profile_participated"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:inputType="none"
            android:singleLine="false"
            android:text="@string/profile_participated"
            android:textColor="#bbbbbb"
            android:textSize="20sp"
            android:textStyle="bold"
            android:typeface="normal" />

        <TextView
            android:id="@+id/profile_participated_target"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="22dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#808080"
            android:textSize="18sp" />
    </TableRow>

    <TableRow
        android:id="@+id/profile_rank_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:baselineAligned="false"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/profile_rank"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:inputType="none"
            android:singleLine="false"
            android:text="@string/profile_rank"
            android:textColor="#bbbbbb"
            android:textSize="20sp"
            android:textStyle="bold"
            android:typeface="normal" />

        <TextView
            android:id="@+id/profile_rank_target"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="22dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#808080"
            android:textSize="18sp" />
    </TableRow>

</LinearLayout>